<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pw.fluffy.testmessages.MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:padding="5dp">

        <TextView
            android:text="@string/header_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/header_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_weight="1"
            android:textStyle="bold"/>

        <TextView
            android:text="@string/header_sender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:textStyle="bold"/>
    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:id="@+id/swipeContainer"
        android:layout_below="@+id/header">

        <ListView
            android:layout_width="match_parent"
            android:id="@+id/lstMessages"
            android:layout_height="wrap_content"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <Button
        android:text="@string/cmd_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cmdAdd"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        android:onClick="cmdAdd_onclick"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"/>

</RelativeLayout>
